[package]
name = "deeplx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
rand = "0.8.5"
chrono = "0.4.23"
axum = "0.6.9"
